@@ -22,6 +22,7 @@
 ==== Qt ====
   * Fix crash when removing expired torrents from the display
   * Fix client from closing, rather than closing to the system tray, when clicking X
+  * Cannot open a torrent in KDE4 with right-clicking
 
 === Transmission 1.75 (2009/09/13) ===
 [http://trac.transmissionbt.com/query?milestone=1.75&group=component&groupdesc=1&order=severity All tickets closed by this release]
